Add domain only tests
